infra/k8s/gke/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenacious-gopal-26951a3e09-depl
  namespace: apps-prod
  labels:
    app: tenacious-gopal-26951a3e09
    release: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tenacious-gopal-26951a3e09
      release: prometheus
  template:
    metadata:
      labels:
        app: tenacious-gopal-26951a3e09
        release: prometheus
    spec:
      runtimeClassName: gvisor
      imagePullSecrets:
        - name: aws-ecr-creds
      serviceAccountName: alloy-service-account
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-configmap
            items:
              - key: alloy.river
                path: config.alloy
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
      containers:
        - name: tenacious-gopal-26951a3e09
          image: 216084506783.dkr.ecr.ap-south-1.amazonaws.com/backstract_apps:tenacious-gopal-26951a3e09
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8080
              name: metrics
          resources:
            requests:
              memory: "300Mi"
              cpu: "50m"
            limits:
              memory: "300Mi"
              cpu: "1"
        - name: alloy-sidecar
          image: grafana/alloy:latest
          args:
            - "run"
            - "/etc/alloy/config.alloy"
            - "--server.http.listen-addr=0.0.0.0:12345"
          ports:
            - name: otlp-grpc
              containerPort: 4317
              protocol: TCP
            - name: otlp-http
              containerPort: 4318
              protocol: TCP
            - name: alloy-http
              containerPort: 12345
              protocol: TCP
          volumeMounts:
            - name: alloy-config
              mountPath: /etc/alloy
            - name: podinfo
              mountPath: /etc/podinfo
              readOnly: true
          resources:
            requests:
              memory: "100Mi"
              cpu: "20m"
            limits:
              memory: "50Mi"
              cpu: "100m"
