infra/k8s/gke/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tenacious-gopal-26951a3e09-route
  namespace: apps-prod
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lcnc-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "cc1fbde45ead-in-south-02.mayson.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /us-west-1-backstractelb-f00e73-coll-125ef35d1f4a44d7bd99da0de53e4153
      backendRefs:
        - name: tenacious-gopal-26951a3e09-srv
          port: 80
